--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "nodemailer": "^6.4.8",
     "nodemon": "^1.19.0",
     "pug": "^2.0.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "socket.io": "^3.1.1",
+    "socketio-file-upload": "^0.7.3"
   },
   "devDependencies": {}
 }
